--- a/Level 1 Task 1/style.css
+++ b/Level 1 Task 1/style.css
@@ -50,7 +50,6 @@ footer {
     padding: 1rem 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    position: fixed;
-    width: 800px;
+    width: 100%;
     bottom: 0;
 }
